--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-/*.log
-/*.pkg.tar.*
-/.crash-stats-api.token
-/.mkpkg_check
-/firefox
-/gecko-dev
-/log
-/mozilla-central
-/mozilla-unified
+*.zip
+*.xz
+mozilla-unified
+pkg
+src
